--- a/timesheet/templates/job_form.html
+++ b/timesheet/templates/job_form.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}{% if job %}Edit Job{% else %}Add Job{% endif %} | FamilyHub Timesheet{% endblock %}
+
+{% block breadcrumbs %}
+<nav aria-label="breadcrumb">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'job_list' %}">Jobs</a></li>
+    <li class="breadcrumb-item active" aria-current="page">{% if job %}Edit Job{% else %}Add Job{% endif %}</li>
+  </ol>
+</nav>
+{% endblock %}
+
 {% block content %}
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
